projects still not centered on online version :( . Testing fix

--- a/css.css
+++ b/css.css
@@ -198,10 +198,18 @@ h3 {
 
 }
 
+.wrap{
+  height:auto;
+  width:500px;
+  margin: auto;
+
+}
+
+
 
 .project {
   width: 25%;
-  margin: 10px;
+  margin: auto;
   padding: 20px;
   display: inline-block;
   border-style: solid;
